--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a class="nav-link " href="#">Photos</a>
                     </li>
                     <li class="nav-item px-3">
-                        <a class="nav-link " href="">Contact</a>
+                        <a class="nav-link " href="#">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -79,7 +79,7 @@
                         <div class="weatherCard  rounded-start-3 text-white ">
                             <div class=" weatherCard-header d-flex justify-content-between mb-2 h-100 ">
                                 <div id="dayName">
-                                    <p class="m-0">Saturday</p>
+                                    <p class="m-0" >Saturday</p>
                                 </div>
                                 <div id="dayDate">
                                     <p class="m-0">21December</p>
@@ -94,8 +94,8 @@
                             </div>
                             <img src="images/113.webp" id="tempIcon" alt="">
                             <div id="weatherDiscription">clear</div>
-                            <img src="images/icon-umberella@2x.png" class="weatherIcon  " alt=""><span class="spanColor" 
-                                id="umberella">20%</span>
+                            <img src="images/icon-umberella@2x.png" class="weatherIcon  " alt="">
+                            <span class="spanColor" id="umberella">20%</span>
                             <img src="images/icon-wind@2x.png" class="weatherIcon " alt=""><span class="spanColor"
                                 id="wind">18km/h</span>
                             <img src="images/icon-compass@2x.png" class="weatherIcon" alt=""><span class=" spanColor"
